tidied up unit tests properties and db connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-MYSQL_HOST=localhost
-MYSQL_PORT=3306
-MYSQL_SCHEMA=vam_box
+address-book.db.host=localhost
+address-book.db.port=3306
+address-book.db.schema=addressbook
+address-book.db.driver=com.mysql.cj.jdbc.Driver
+address-book.db.username=abuser
+address-book.db.password=P^ssword*001
