--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,15 +3,26 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-	<display-name>Archetype Created Web Application</display-name>
+	<display-name>Address Book App</display-name>
 	<servlet>
 		<servlet-name>HelloServlet</servlet-name>
 		<display-name>HelloServlet</display-name>
 		<description></description>
 		<servlet-class>com.zonesoft.addressbook.servlets.HelloServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>PersonApi</servlet-name>
+		<display-name>PersonApi</display-name>
+		<description></description>
+		<servlet-class>com.zonesoft.addressbook.api.PersonApi</servlet-class>
+	</servlet>	
 	<servlet-mapping>
 		<servlet-name>HelloServlet</servlet-name>
 		<url-pattern>/hello</url-pattern>
 	</servlet-mapping>
+		<servlet-mapping>
+		<servlet-name>PersonApi</servlet-name>
+		<url-pattern>/api/person</url-pattern>
+	</servlet-mapping>
+	
 </web-app>
