--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
 			<artifactId>thymeleaf</artifactId>
 			<version>3.0.14.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.32</version>
+		</dependency>
 	</dependencies>
 
 	<build>
