--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,25 +4,43 @@
 
 <web-app>
 	<display-name>Address Book App</display-name>
+
 	<servlet>
-		<servlet-name>HelloServlet</servlet-name>
-		<display-name>HelloServlet</display-name>
+		<servlet-name>GreetingsController</servlet-name>
+		<display-name>Greetings</display-name>
 		<description></description>
-		<servlet-class>com.zonesoft.addressbook.servlets.HelloServlet</servlet-class>
+		<servlet-class>com.zonesoft.addressbook.webui.GreetingController</servlet-class>
 	</servlet>
+
 	<servlet>
 		<servlet-name>PersonApi</servlet-name>
 		<display-name>PersonApi</display-name>
 		<description></description>
-		<servlet-class>com.zonesoft.addressbook.api.PersonApi</servlet-class>
-	</servlet>	
+		<servlet-class>com.zonesoft.addressbook.webapi.PersonApi</servlet-class>
+	</servlet>
+
+	<servlet>
+		<servlet-name>PersonController</servlet-name>
+		<display-name>PersonController</display-name>
+		<description></description>
+		<servlet-class>com.zonesoft.addressbook.webui.PersonController</servlet-class>
+	</servlet>
+	
+		
 	<servlet-mapping>
-		<servlet-name>HelloServlet</servlet-name>
+		<servlet-name>GreetingsController</servlet-name>
 		<url-pattern>/hello</url-pattern>
 	</servlet-mapping>
-		<servlet-mapping>
+	
+	<servlet-mapping>
 		<servlet-name>PersonApi</servlet-name>
 		<url-pattern>/api/person</url-pattern>
 	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>PersonController</servlet-name>
+		<url-pattern>/ui/person</url-pattern>
+	</servlet-mapping>
+
 	
 </web-app>
