OtherNames UI and supporting service and dao

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,27 +4,35 @@
 
 <web-app>
 	<display-name>Address Book App</display-name>
-
+	
 	<servlet>
 		<servlet-name>GreetingsController</servlet-name>
 		<display-name>Greetings</display-name>
 		<description></description>
-		<servlet-class>com.zonesoft.addressbook.webui.GreetingController</servlet-class>
+		<servlet-class>com.zonesoft.addressbook.web.ui.GreetingController</servlet-class>
 	</servlet>
 
 	<servlet>
 		<servlet-name>PersonApi</servlet-name>
 		<display-name>PersonApi</display-name>
 		<description></description>
-		<servlet-class>com.zonesoft.addressbook.webapi.PersonApi</servlet-class>
+		<servlet-class>com.zonesoft.addressbook.web.api.PersonApi</servlet-class>
 	</servlet>
 
+	<servlet>
+		<servlet-name>OtherNamesController</servlet-name>
+		<display-name>OtherNamesController</display-name>
+		<description></description>
+		<servlet-class>com.zonesoft.addressbook.web.ui.OtherNamesController</servlet-class>
+	</servlet>
+	
 	<servlet>
 		<servlet-name>PersonController</servlet-name>
 		<display-name>PersonController</display-name>
 		<description></description>
-		<servlet-class>com.zonesoft.addressbook.webui.PersonController</servlet-class>
+		<servlet-class>com.zonesoft.addressbook.web.ui.PersonController</servlet-class>
 	</servlet>
+	
 	
 		
 	<servlet-mapping>
@@ -40,6 +48,11 @@
 	<servlet-mapping>
 		<servlet-name>PersonController</servlet-name>
 		<url-pattern>/ui/person</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>OtherNamesController</servlet-name>
+		<url-pattern>/ui/OtherNames</url-pattern>
 	</servlet-mapping>
 	
 </web-app>
