--- a/ci/task_show_uname.yml
+++ b/ci/task_show_uname.yml
@@ -5,8 +5,8 @@ image_resource:
   type: docker-image
   source: {repository: busybox}
 
-inputs:
-  - name: task-scripts
+#inputs:
+#  - name: task-scripts
 
 run:
   path: /bin/sh
