--- a/ci/task_show_uname.yml
+++ b/ci/task_show_uname.yml
@@ -10,5 +10,5 @@ image_resource:
 
 run:
   path: /bin/sh
-  args: ["./task_show_uname.sh"]
+  args: ["/ci/task_show_uname.sh"]
 #  args: ["./task-scripts/task_show_uname.sh"]
