--- a/ci/task_show_uname.yml
+++ b/ci/task_show_uname.yml
@@ -5,11 +5,11 @@ image_resource:
   type: docker-image
   source: {repository: busybox}
 
-#inputs:
-#  - name: task-scripts
+inputs:
+  - name: task-scripts
 
 run:
-    path: pwd
-#  path: /bin/sh
-#  args: ["./ci/task_show_uname.sh"]
-#  args: ["./task-scripts/task_show_uname.sh"]
+#  path: pwd
+  path: /bin/sh
+  args: ["/task-scripts/ci/task_show_uname.sh"]
+#    args: ["./task-scripts/task_show_uname.sh"]
