override application.properties configs with environment variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-address-book.db.host=localhost
+address-book.db.host=localhost_DISABLE
 address-book.db.port=3306
 address-book.db.schema=addressbook
 address-book.db.driver=com.mysql.cj.jdbc.Driver
